overdues fix with distribution